public/css/style.css
body {
    font-family: sans-serif;
    font-size: 10pt;
    padding: 2em 1em 2em 70px;
    margin: 0;
    color: black;
    background: white;
}

body > header {
    text-align: center;
    width: 335px;
    margin-top: 2px;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 20px;
    padding-bottom: 10px;
}

body > header h1 {
    font-size: 24pt;
    margin-bottom: 5px;
    margin-top: 5px;
}

div#pause {
    color: red;
    font-style: italic;
}

table.runningStats {
    width: 85%;
}

.runningStats th {
    font-size: 8pt;
    font-style: italic;
    margin-bottom: 0px;
    text-align: right;
    width: 33%;
}

.runningStats td {
    font-weight: bold;
    font-size: 18pt;
    text-align: right;
    padding: 0px;
}

#obama {
    width: 400px;
    height: 100%;
    float: left;
    margin-left: 10%;
}

#romney {
    width: 400px;
    height: 100%;
    float: right;
    margin-right: 10%;
}

header.column {
    padding: 20px;
    border-bottom: thin solid #cccccc;
    height: 60px;
}

header .count {
    margin-left: 30px;
}
    
article.tweet {
    padding: 20px;
    clear: both;
    display: block;
    border-bottom: thin solid #cccccc;
    height: 120px;
}

article.tweet .text {
    height: 50px;
}

div.clearUpdate {
    font-size: 0px;
    line-height: 0px;
    clear: both;
}

article header {
    margin-bottom: 10px;
    height: 45px;
    font-weight: bold;
}

article footer {
    margin-top: 10px;
    font-size: 10pt;
}

div.created {
    float: left;
}

div.sentiment {
    text-align: right;
}

.negative {
    color: red;
}

.positive {
    color: lightgreen;
}

img.avatar {
    vertical-align: middle;
    float: left;
    margin-right: 10px;
    border-radius: 5px;
    height: 45px;
}

a {
  text-decoration: none;
}

.both {
    background-color: #FAEBD7;
}

